# BadUSB-2.0

./: rp2040_firmware_main.c
bad_usb_2/: application.fam  bad_usb2_app.c
flipper_app/: application.fam  bad_usb2_worker.c  bad_usb2_worker.h  bad_usb_app_i.h  badusb2_protocol.h
flipper_app/scenes/: bad_usb_scene_work.c
vgm_firmware/: CMakeLists.txt  build.sh  main.c  tusb_config.h
