cmake_minimum_required(VERSION 3.13)
include(pico_sdk_import.cmake)
project(badusb2_vgm C CXX ASM)
set(CMAKE_C_STANDARD 11)
set(CMAKE_CXX_STANDARD 17)
pico_sdk_init()
add_executable(badusb2_vgm main.c)
target_include_directories(badusb2_vgm PRIVATE ${CMAKE_CURRENT_LIST_DIR})
pico_enable_stdio_usb(badusb2_vgm 0)
pico_enable_stdio_uart(badusb2_vgm 1)
target_link_libraries(badusb2_vgm pico_stdlib hardware_spi tinyusb_device tinyusb_board)
pico_add_extra_outputs(badusb2_vgm)
